syntax = "proto3";

//import "message.proto";

package proto;

message InitTriggerRequest {
    uint32 stub_server = 1;
    bytes config = 2;
}

message InitTriggerResponse {}

message TriggerRequest {
}

message TriggerResponse {
    string tag = 1;
    bytes message = 2;
}

message AckRequest {
    string tag = 1;
    bytes response = 2;
}

message AckResponse {}

message NackRequest {
    string tag = 1;
    string error = 2;
}

message NackResponse {}

message CloseRequest {
}

message CloseResponse {}

service Trigger {
    rpc Init(InitTriggerRequest) returns (InitTriggerResponse);
    rpc Trigger(TriggerRequest) returns (TriggerResponse);
    rpc Ack(AckRequest) returns (AckResponse);
    rpc Nack(NackRequest) returns (NackResponse);
    rpc Close(CloseRequest) returns (CloseResponse);
}
